# the-ten-top

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
design/: DESIGN_DOCUMENT.md  IMPLEMENTATION_NOTES.md
design/sketches/: REFERENCES.md  food_truck001.aseprite  food_truck001_axon.aseprite  hamburger.aseprite  heart.aseprite  heartbroken.aseprite  okay.aseprite  spritesheet.aseprite
resources/: display_config.ron
resources/sprites/: spritesheet.aseprite  spritesheet.ron
src/: main.rs  state.rs
src/common/: mod.rs  point.rs
src/components/: assignment.rs  cooked.rs  cupboard.rs  destination.rs  dish.rs  feeling.rs  food.rs  ingredient.rs  mod.rs  parent.rs  patron.rs  plate.rs  register.rs  simple_animation.rs  stove.rs  task.rs  thought_bubble.rs  velocity.rs  worker.rs
src/entities/: cupboard.rs  dish.rs  feeling.rs  food.rs  ingredient.rs  mod.rs  patron.rs  plate.rs  register.rs  stove.rs  thought_bubble.rs  worker.rs
src/resources/: cookbook.rs  game.rs  mod.rs  patron_order.rs  sprite.rs  task.rs
src/systems/: assignment.rs  cupboard.rs  destination.rs  dish.rs  feeling.rs  food.rs  ingredient.rs  mod.rs  patron.rs  patron_task.rs  plate.rs  register.rs  simple_animation.rs  stove.rs  task.rs  thought_bubble.rs  worker.rs  worker_task.rs
