[package]
name = "amethyst-starter-2d"
version = "0.1.0"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.12.0", features = ["nightly"] }
log = { version = "0.4.6", features = ["serde"] }

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
