[package]
name = "the-ten-top"
version = "0.1.0"
authors = ["Blaine Price <1wbprice@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.12.0" }
log = { version = "0.4.6", features = ["serde"] }
rand = { version = "0.7.0" }

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
